[gd_scene load_steps=6 format=3 uid="uid://cn3npouys0uxi"]

[ext_resource type="Script" uid="uid://b3reoulg6qs5j" path="res://scripts/LevelSelect.gd" id="1_levelselect"]
[ext_resource type="Texture2D" uid="uid://bcurgxptbywii" path="res://assets/textures/bg.png" id="2_bg"]
[ext_resource type="Texture2D" uid="uid://cbjywjre21yfg" path="res://assets/textures/arrow_left.png" id="3_arrow_left"]
[ext_resource type="Texture2D" uid="uid://dce8k8truvlss" path="res://assets/textures/arrow_right.png" id="4_arrow_right"]
[ext_resource type="FontFile" uid="uid://bq7yrq67xeu18" path="res://assets/fonts/HUM521BC.TTF" id="5_font"]

[node name="LevelSelect" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_levelselect")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
stretch_mode = 6

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.2
offset_left = -100.0
offset_right = 100.0
theme_override_fonts/font = ExtResource("5_font")
theme_override_font_sizes/font_size = 72
text = "Select Level"
horizontal_alignment = 1

[node name="LevelContainer" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.7
offset_left = -175.0
offset_right = 175.0

[node name="ArrowLeft" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 114.0
offset_bottom = 32.0
texture = ExtResource("3_arrow_left")

[node name="ArrowRight" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -16.0
offset_right = -50.0
offset_bottom = 32.0
texture = ExtResource("4_arrow_right")
